--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -7,8 +7,18 @@
     padding: 0 10px 0 10px;
 }
 
+.sidebar > hr {
+    border: 1px solid #282828;
+    width: 90%;
+    margin: 10px auto;
+}
 .sidebar__logo{
     height: 70px;
     padding: 10px;
     margin-right: auto;
+}
+.sidebar__title{
+    margin-left: 10px;
+    padding: 5px;
+    font-size: 12px;
 }
